# KelpBar-SmartScreen-Action

./: .gitignore  README.md  build.sh
app/: CMakeLists.txt  main.c
app/res/: res_conf.h
app/res/color/: color_conf.h
app/res/font/: font_conf.h
app/ui/: page_about_us.c  page_alarm_clock.c  page_alarm_remind.c  page_city_setting.c  page_conf.c  page_conf.h  page_connect_loading.c  page_language_game.c  page_linkage.c  page_linkage_setting.c  page_main.c  page_pulldown_view.c  page_pulldown_view.h  page_shortcutkey.c  page_simulate_iphone.c  page_sleep.c  page_system_setting.c  page_time_setting.c  page_tomato_finish.c  page_tomato_learn.c  page_tomato_rest.c  page_tomato_time_setting.c  page_warn.c  page_wifi_setting.c
app/ui/data/: device_data.c  device_data.h
app/ui/utils/: ble_mesh.c  ble_mesh.h  utils.c  utils.h
app/ui/utils/clock/: lv_clock.h  lv_clock0.c  lv_clock1.c  lv_clock2.c
app/ui/utils/file/: file_save.c  file_save.h
app/ui/utils/template/: page_home.c.template
app_sdk/: .gitignore  CMakeLists.txt  README.md
app_sdk/app/res/: CMakeLists.txt
app_sdk/app/res/image/: image_conf.h
app_sdk/app/res/music/: music_conf.h
app_sdk/app/ui/: page_about_us.c  page_alarm_clock.c  page_conf.c  page_conf.h  page_connect_loading.c  page_language_game.c  page_linkage.c  page_linkage_setting.c  page_simulate_iphone.c  page_tomato_time_setting.c
app_sdk/app/ui/data/: device_data.c
app_sdk/app/ui/utils/: ble_mesh.c  ble_mesh.h
app_sdk/app/ui/utils/clock/: lv_clock.h  lv_clock0.c
app_sdk/component/font/: CMakeLists.txt  font_utils.c
app_sdk/component/hal/: em_hal_brightness.h  em_hal_console.h  em_hal_uart.h
app_sdk/component/net/: http_manager.h
app_sdk/component/osal/: osal_conf.h
app_sdk/component/player/: CMakeLists.txt  audio_player_async.c
app_sdk/component/usb_hid/: CMakeLists.txt
app_sdk/component/wifi/: CMakeLists.txt
app_sdk/component/wifi/utils/: base_utils.c
app_sdk/platform/t113/: t113.cmake
app_sdk/platform/t113/lib/: libcrypto.so.1.1  libmbedtls.so.11  libnghttp2.so.14.20.1  libssl.so.1.1  libz.so.1.2.11
app_sdk/platform/t113/src/hal/: em_hal_audio.c  em_hal_system.c  em_hal_time.c
app_sdk/platform/t113/src/porting/: lv_conf.h  lv_port_tick.h  port_conf.h
app_sdk/platform/t113/src/porting/g2d/: sunxifb.c  sunxifb.h  sunximem.c  sunximem.h
app_sdk/platform/x86linux/: linux.cmake
app_sdk/platform/x86linux/lib/: libmbedcrypto.so.2.16.12  libmbedtls.so.2.16.12
app_sdk/platform/x86linux/src/: CMakeLists.txt
app_sdk/platform/x86linux/src/hal/: em_hal_audio.c  em_hal_console.c  em_hal_system.c  em_hal_uart.c
app_sdk/platform/x86linux/src/porting/: lv_drv_conf.h  monitor.h  simulator_init.h
component/font/: font_utils.h
component/hal/: em_hal_audio.h  em_hal_system.h  em_hal_time.h
component/net/: CMakeLists.txt  http_manager.c
component/osal/: CMakeLists.txt  osal_queue.c  osal_queue.h  osal_thread.c  osal_thread.h
component/player/: audio_player_async.h
component/usb_hid/: usb_hid_async.c  usb_hid_async.h  usb_hid_utils.c  usb_hid_utils.h
component/wifi/: wpa_manager.c  wpa_manager.h
component/wifi/utils/: base_utils.h
docs/: kelpbar_learning_notes.md
lvgl/: CMakeLists.txt
platform/t113/: CMakeLists.txt
platform/t113/lib/: libbz2.so.1.0  libcurl.so.4.7.0  libfreetype.so.6.17.0  libmbedcrypto.so.3  libmbedx509.so.0
platform/t113/src/: CMakeLists.txt
platform/t113/src/hal/: em_hal_brightness.c  em_hal_console.c  em_hal_uart.c
platform/t113/src/porting/: lv_port_disp.c  lv_port_disp.h  lv_port_indev.c  lv_port_indev.h  lv_port_tick.c
platform/t113/src/porting/g2d/: g2d_driver.h  g2d_driver_enh.h  sunxig2d.c  sunxig2d.h
platform/t113/src/utils/: base_utils.c
platform/x86linux/: CMakeLists.txt
platform/x86linux/lib/: libmbedx509.so.2.16.12
platform/x86linux/src/hal/: em_hal_brightness.c  em_hal_time.c
platform/x86linux/src/porting/: lv_conf.h  monitor.c  simulator_init.c
